--- a/sep2_client/Cargo.toml
+++ b/sep2_client/Cargo.toml
@@ -14,7 +14,7 @@ keywords = ["energy", "DER", "20305", "SEP2", "IEEE2030"]
 [dependencies]
 anyhow = "1.0.72"
 async-trait = "0.1.72"
-sep2_common = { git = "https://github.com/synergy-au/sep2_common.git", rev = "627e8b9", features = [
+sep2_common = { git = "https://github.com/synergy-au/sep2_common.git", rev = "d4da4af", features = [
   "edev",
   "time",
 ] }
@@ -36,7 +36,7 @@ httpdate = "1.0.3"
 ahash = "0.8.6"
 
 [dev-dependencies]
-sep2_common = { git = "https://github.com/synergy-au/sep2_common.git", rev = "627e8b9", features = [
+sep2_common = { git = "https://github.com/synergy-au/sep2_common.git", rev = "d4da4af", features = [
   "examples",
   "der",
   "edev",
@@ -60,6 +60,7 @@ drlc = ["sep2_common/drlc", "event"]
 flow_reservation = ["sep2_common/flow_reservation", "event"]
 pubsub = ["sep2_common/pubsub"]
 csip_aus = ["sep2_common/csip_aus"]
+csip_aus_ext = ["sep2_common/csip_aus_ext"]
 all = [
   "event",
   "der",
@@ -69,6 +70,7 @@ all = [
   "flow_reservation",
   "pubsub",
   "csip_aus",
+  "csip_aus_ext",
 ]
 
 [[example]]
